----------------------------------------------------------------------
 OmegaT 3.1.9
----------------------------------------------------------------------
  15 Enhancements
  12 Bug fixes
   3 Localisation updates
----------------------------------------------------------------------
3.1.9 vs. 3.1.8

  Implemented requests:

  - Machine translation with Yandex 
  https://sourceforge.net/p/omegat/feature-requests/790/

  - Use selection for text Search from "Fuzzy Match" or "Glossary" panes
  https://sourceforge.net/p/omegat/feature-requests/877/

  - Allow to insert selection into translation from the Fuzzy Matches pane
  https://sourceforge.net/p/omegat/feature-requests/1057/ 

  - Warn user if the Enter key is hit while "Use TAB to Advance" is checked 
  https://sourceforge.net/p/omegat/feature-requests/1061/

  - Support XLIFF equiv-text in tooltips, simplify tooltip prefs
  https://sourceforge.net/p/omegat/feature-requests/1064/

  - Show the number of non-unique segment instances in the segment markers
  https://sourceforge.net/p/omegat/feature-requests/1068/

  - Contextual menu to jump to another instance of non-unique segments
  https://sourceforge.net/p/omegat/feature-requests/1067/

  - Make it easy to "brand" OmegaT for custom deployments 
  https://sourceforge.net/p/omegat/feature-requests/1069/


  Other enhancements:
  
  - ILIAS Language File filter. Those files can have the .lang or
.lang.local extensions. As .lang files are also loaded by the Lang 
Mozilla filter, it has to be unabled to load them with the ILIAS filter.

  - Machine translation requests are now cached. That means that a 
source segment already translated will not be requested again during
the same session (i.e., until OmegaT is closed).

  - The initial location and the layout when resized of various dialogs 
were improved. The OK button was set as the default button for all dialogs.

  - The Custom Colours dialog was improved. It can be closed with Escape, 