@@ -5,7 +5,7 @@
 
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
                2007-2010 Didier Briel
-               2012 Phillip Hall
+               2012-2015 Phillip Hall
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -31,7 +31,7 @@ import org.omegat.filters3.xml.DefaultXMLDialect;
 
 /**
  * This class specifies Visio XML Dialect.
- * Works on Visio 2003 vdx files (other versions of Visio have not been tested)
+ * Works on Visio 2003 and 2010 vdx files (other versions of Visio have not been tested)
  * 
  * @author Didier Briel
  * @author Phillip Hall
@@ -40,62 +40,74 @@ import org.omegat.filters3.xml.DefaultXMLDialect;
 public class VisioDialect extends DefaultXMLDialect {
     public VisioDialect() {
         defineParagraphTags(new String[] {
-            "Text",                                                           
+            "Text",
         });
 
 
        defineIntactTags(new String[] {
-           "DocumentProperties",                                                       
-           "DocumentSettings",                                                       
-           "Colors",                                                       
-           "FaceNames",                                                       
-           "StyleSheets",                                                       
-           "DocumentSheet",                                                       
-           "Masters",                                                       
-           "Misc",                                                       
-           "TextBlock",                                                       
-           "Geom",                                                       
-           "Para",                                                       
-           "Char",                                                       
-           "Connection",                                                       
-           "XForm",                                                       
-           "Line",                                                       
-           "Fill",                                                       
-           "Event",                                                       
-           "PageSheet",                                                       
-           "PageProps",                                                       
-           "PageLayout",                                                       
-           "PrintProps",                                                       
-           "PageHeight",                                                       
-           "PageWidth",                                                       
-           "Image",                                                       
-           "PinY",                                                       
-           "Width",                                                       
-           "Height",                                                       
-           "XForm1D",                                                       
-           "EndX",                                                       
-           "LayerMem",                                                       
-           "TextXForm",                                                       
-           "Control",                                                       
-           "ForeignData",                                                       
-           "Foreign",                                                       
-           "Menu",                                                       
-           "Act",                                                       
-           "User",                                                       
-           "Help",                                                       
-           "Copyright",                                                       
-           "VBProjectData",                                                       
-           "FooterMargin",                                                       
-           "HeaderMargin",                                                       
-           "HeaderFooter",                                                       
-           "Window",                                                       
-           "Windows",                                                       
-           "EventList",                                                       
-           "Scratch",                                                       
-           "TextBlock",                                                       
-           "Fill",                                                       
-           "Protection",                                                       
-           "Layout",                                                       
+           "DocumentProperties",
+           "DocumentSettings",
+           "Colors",
+           "FaceNames",
+           "StyleSheets",
+           "DocumentSheet",
+           "Masters",
+           "Misc",
+           "TextBlock",
+           "Geom",
+           "Para",
+           "Char",
+           "Connection",
+           "XForm",
+           "Line",
+           "Fill",
+           "Event",
+           "PageSheet",
+           "PageProps",
+           "PageLayout",
+           "PrintProps",
+           "PageHeight",
+           "PageWidth",
+           "Image",
+           "PinY",
+           "Width",
+           "Height",
+           "XForm1D",
+           "EndX",
+           "LayerMem",
+           "TextXForm",
+           "Control",
+           "ForeignData",
+           "Foreign",
+           "Menu",
+           "Act",
+           "User",
+           "Help",
+           "Copyright",
+           "VBProjectData",
+           "FooterMargin",
+           "HeaderMargin",
+           "HeaderFooter",
+           "Window",
+           "Windows",
+           "EventList",
+           "Scratch",
+           "TextBlock",
+           "Protection",
+           "Layout",
+           "Icon",
+           "vx:Event",
+           "v14:Geom",
+           "vx:Fill",
+           "PreviewPicture",
+           "vx:Char",
+           "vx:Color",
+           "vx:Line",
+           "FillForegnd",
+           "XForm1D",
+           "ShdwBkgnd",
+           "TextBkgnd",
+           "vx:TextBkgnd",
        });
     }
 
